--- a/src/components/ProfilePage/ProfilePage.scss
+++ b/src/components/ProfilePage/ProfilePage.scss
@@ -2,13 +2,13 @@
 .profile {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   gap: 2.5rem;
   max-width: 550px;
   padding: 1rem;
   margin: auto;
-  height: 100%;
+  height: 100vh;
 
   &__top {
     display: flex;
