--- a/src/components/Todos/Todos.scss
+++ b/src/components/Todos/Todos.scss
@@ -21,7 +21,7 @@
     @include media("<smd") {
       align-self: center;
       letter-spacing: 0.05em;
-      font-size: 1rem;
+      font-size: 0.95rem;
     }
   }
   &__add {
