--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,17 +10,13 @@
 }
 
 body,
-html,
-#root {
+html {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
-  background: linear-gradient(to top, #181820, #222227) !important;
+  background: #111114;
   color: white;
   height: 100%;
   width: 100%;
-  @include media(">md") {
-    overflow-y: scroll;
-  }
 }
 
 .Layout {
